--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -20,7 +20,7 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build the Docker image
-        run: docker build . --file Dockerfile --tag ghcr.io/${{ github.actor }}/cloudflare-ddns:latest
+        run: docker build . --file Dockerfile --tag ghcr.io/${{ github.actor | toLower }}/cloudflare-ddns:latest
 
       - name: Push the Docker image
-        run: docker push ghcr.io/${{ github.actor }}/cloudflare-ddns:latest
+        run: docker push ghcr.io/${{ github.actor | toLower }}/cloudflare-ddns:latest
