--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -12,10 +12,6 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Set lowercase actor
-        id: set_actor
-        run: echo "::set-output name=github_actor::${{ github.actor,, }}"
-
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
         with:
@@ -24,7 +20,7 @@ jobs:
           password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build the Docker image
-        run: docker build . --file Dockerfile --tag ghcr.io/${{ steps.set_actor.outputs.github_actor }}/cloudflare-ddns:latest
+        run: docker build . --file Dockerfile --tag ghcr.io/${{ github.actor }}/cloudflare-ddns:latest
 
       - name: Push the Docker image
-        run: docker push ghcr.io/${{ steps.set_actor.outputs.github_actor }}/cloudflare-ddns:latest
+        run: docker push ghcr.io/${{ github.actor }}/cloudflare-ddns:latest
